--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -954,12 +954,16 @@ main {
 .project-item > a { width: 100%; }
 
 .project-img {
+  display: inline-block;
   position: relative;
   width: 100%;
   height: 200px;
   border-radius: 16px;
   overflow: hidden;
   margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+ backgroung-color:var(--jet);
 }
 
 .project-img::before {
@@ -1001,9 +1005,12 @@ main {
 .project-item-icon-box ion-icon { --ionicon-stroke-width: 50px; }
 
 .project-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  display: block;
+  width: auto;
+  height: auto;
+  max-width:100%;
+  max-height:100%;
+  object-fit: contain;
   transition: var(--transition-1);
 }
 
